bug fix: chunk of circle visible before animation

--- a/src/components/TextUnderline/text-underline.scss
+++ b/src/components/TextUnderline/text-underline.scss
@@ -42,9 +42,12 @@ $circle-offset: 0.6em;
   font-weight: 900;
 
   svg {
-    top: 0.09em;
-    left: -0.5em;
+    top: -0.125em;
+    left: -0.35em;
     width: calc(100% + #{$circle-offset});
+    stroke: transparent;
+    transition: stroke 0.3s linear 0.3s;
+    transform: rotate(3deg);
     animation: drawline 0.4s cubic-bezier(0.65, 0.05, 0.36, 1) forwards;
     animation-play-state: paused;
     animation-delay: 0.3s;
@@ -54,6 +57,7 @@ $circle-offset: 0.6em;
 
   &.active {
     svg {
+      stroke: $color-classic-gray-dark;
       animation-play-state: running;
     }
   }
